updated for java 1.5 and the latest 4.3preX jEdit